# ship

./: .gitmodules  CMakeLists.txt  README.md  Untitled0.ipynb  main.cpp  ship.cpp
include/: get_libraries.hpp
include/ship/: pair.hpp  ship.h
include/ship/elf/: dependency_graph.hpp  enumerate.hpp  is_elf.hpp
include/ship/io/: all_exist.hpp  get_dependencies.hpp  normalize.hpp  popen_file.hpp  read_file.hpp
src/: enumerate_command.cpp  gather_command.cpp  graph_command.cpp  libship.cpp  measure_command.cpp  ship-io.cpp  usage_command.cpp
